-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.0 Beta1
-
None
-
-
df241d1585e2ef6be28e38182cdf7e562e9c1a8a (qt/qtwebengine/5.15)
asan failure happens right after comboBoxPopupPositionAfterChildMove in next test acceptNavigationRequest on events processing:
02:43:05.313425 | PASS : tst_QWebEnginePage::comboBoxPopupPositionAfterChildMove() 02:43:05.356061 | AddressSanitizer:DEADLYSIGNAL 02:43:05.356236 | ================================================================= 02:43:05.356265 | ==1438691==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000000 (pc 0x7fcb884c132a bp 0x7ffda7463010 sp 0x7ffda7462f00 T0) 02:43:05.356290 | ==1438691==The signal is caused by a READ memory access. 02:43:05.356312 | ==1438691==Hint: address points to the zero page. 02:43:06.914021 | #0 0x7fcb884c1329 in QtWebEngineCore::RenderWidgetHostViewQt::OnRenderFrameMetadataChangedAfterActivation() /home/user/qt/5.15/qtwebengine/src/core/render_widget_host_view_qt.cpp 02:43:06.915017 | #1 0x7fcb9aa2258a in content::RenderFrameMetadataProviderImpl::OnRenderFrameMetadataChangedAfterActivation(cc::RenderFrameMetadata) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/content/browser/renderer_host/render_frame_metadata_provider_impl.cc:86:14 02:43:06.915240 | #2 0x7fcb9aa261e2 in void base::internal::FunctorTraits<void (content::RenderFrameMetadataProviderImpl::*)(cc::RenderFrameMetadata), void>::Invoke<void (content::RenderFrameMetadataProviderImpl::*)(cc::RenderFrameMetadata), base::WeakPtr<content::RenderFrameMetadataProviderImpl>, cc::RenderFrameMetadata>(void (content::RenderFrameMetadataProviderImpl::*)(cc::RenderFrameMetadata), base::WeakPtr<content::RenderFrameMetadataProviderImpl>&&, cc::RenderFrameMetadata&&) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/base/bind_internal.h:498:12 02:43:06.915718 | #3 0x7fcb8839a610 in base::OnceCallback<void ()>::Run() && /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/base/callback.h:98:12 02:43:06.916011 | #4 0x7fcb9aa27550 in content::FrameTokenMessageQueue::EnqueueOrRunFrameTokenCallback(unsigned int, base::OnceCallback<void ()>) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/content/browser/renderer_host/frame_token_message_queue.cc:49:25 02:43:06.916307 | #5 0x7fcb9aa22f2e in content::RenderFrameMetadataProviderImpl::OnRenderFrameMetadataChanged(unsigned int, cc::RenderFrameMetadata const&) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/content/browser/renderer_host/render_frame_metadata_provider_impl.cc:118:31 02:43:06.917143 | #6 0x7fcb8943ef4c in content::mojom::RenderFrameMetadataObserverClientStubDispatch::Accept(content::mojom::RenderFrameMetadataObserverClient*, mojo::Message*) /home/user/build/5.15/qtwebengine/src/core/release/gen/content/common/render_frame_metadata.mojom.cc:378:13 02:43:06.917711 | #7 0x7fcb906107e0 in mojo::InterfaceEndpointClient::HandleValidatedMessage(mojo::Message*) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/interface_endpoint_client.cc:553:54 02:43:06.917923 | #8 0x7fcb90626bb0 in mojo::MessageDispatcher::Accept(mojo::Message*) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/message_dispatcher.cc:41:19 02:43:06.917965 | #9 0x7fcb906145f5 in mojo::InterfaceEndpointClient::HandleIncomingMessage(mojo::Message*) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/interface_endpoint_client.cc:356:22 02:43:06.918885 | #10 0x7fcb9062f7eb in mojo::internal::MultiplexRouter::ProcessIncomingMessage(mojo::internal::MultiplexRouter::MessageWrapper*, mojo::internal::MultiplexRouter::ClientCallBehavior, base::SequencedTaskRunner*) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/multiplex_router.cc:877:42 02:43:06.918999 | #11 0x7fcb9062e870 in mojo::internal::MultiplexRouter::Accept(mojo::Message*) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/multiplex_router.cc:598:38 02:43:06.919117 | #12 0x7fcb90626bb0 in mojo::MessageDispatcher::Accept(mojo::Message*) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/message_dispatcher.cc:41:19 02:43:06.919761 | #13 0x7fcb90602764 in mojo::Connector::DispatchMessage(mojo::Message) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/connector.cc:605:49 02:43:06.919881 | #14 0x7fcb90601af7 in mojo::Connector::DispatchNextMessageInQueue() /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/connector.cc:635:17 02:43:06.920553 | #15 0x7fcb8f77246e in Run /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/base/callback.h:98:12 02:43:06.920572 | #16 0x7fcb8f77246e in base::TaskAnnotator::RunTask(char const*, base::PendingTask*) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/base/task/common/task_annotator.cc:142:33 02:43:06.921131 | #17 0x7fcb8f7dc738 in base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl(base::sequence_manager::LazyNow*, bool*) /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/base/task/sequence_manager/thread_controller_with_message_pump_impl.cc:365:23 02:43:06.921210 | #18 0x7fcb8f7dd8ec in DoWork /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/base/task/sequence_manager/thread_controller_with_message_pump_impl.cc:265:7 02:43:06.921251 | #19 0x7fcb8f7dd8ec in non-virtual thunk to base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWork() /home/user/build/5.15/qtwebengine/src/core/release/../../../../../../qt/5.15/qtwebengine/src/3rdparty/chromium/base/task/sequence_manager/thread_controller_with_message_pump_impl.cc 02:43:06.921868 | #20 0x7fcb8839b9df in QtWebEngineCore::MessagePumpForUIQt::handleScheduledWork() /home/user/qt/5.15/qtwebengine/src/core/browser_main_parts_qt.cpp:202:51 02:43:06.944639 | #21 0x7fcb770188fb in QObject::event(QEvent*) /home/user/qt/5.15/qtbase/src/corelib/kernel/qobject.cpp 02:43:06.971158 | #22 0x7fcb795dad54 in QApplicationPrivate::notify_helper(QObject*, QEvent*) /home/user/qt/5.15/qtbase/src/widgets/kernel/qapplication.cpp:3673:26 02:43:06.971557 | #23 0x7fcb795de250 in QApplication::notify(QObject*, QEvent*) /home/user/qt/5.15/qtbase/src/widgets/kernel/qapplication.cpp 02:43:06.974163 | #24 0x7fcb76fc8fc0 in QCoreApplication::notifyInternal2(QObject*, QEvent*) /home/user/qt/5.15/qtbase/src/corelib/kernel/qcoreapplication.cpp:1061:18 02:43:06.974750 | #25 0x7fcb76fcbf4b in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) /home/user/qt/5.15/qtbase/src/corelib/kernel/qcoreapplication.cpp:1815:9 02:43:06.977695 | #26 0x7fcb770862ce in postEventSourceDispatch(_GSource*, int (*)(void*), void*) /home/user/qt/5.15/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:277:5 02:43:06.978460 | #27 0x7fcb7177b9bd in g_main_context_dispatch (/usr/lib/libglib-2.0.so.0+0x6b9bd) 02:43:06.978568 | #28 0x7fcb7177d830 (/usr/lib/libglib-2.0.so.0+0x6d830) 02:43:06.978631 | #29 0x7fcb7177d870 in g_main_context_iteration (/usr/lib/libglib-2.0.so.0+0x6d870) 02:43:06.978901 | #30 0x7fcb770855d1 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) /home/user/qt/5.15/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp 02:43:06.979197 | #31 0x7fcb76fca069 in QCoreApplication::processEvents(QFlags<QEventLoop::ProcessEventsFlag>, int) /home/user/qt/5.15/qtbase/src/corelib/kernel/qcoreapplication.cpp:1314:49 02:43:06.979500 | #32 0x7fcb77078bee in QTest::qWait(int) /home/user/qt/5.15/qtbase/src/corelib/kernel/qtestsupport_core.cpp:104:9 02:43:06.998162 | #33 0x557deece03c3 in tst_QWebEnginePage::acceptNavigationRequest() /home/user/qt/5.15/qtwebengine/tests/auto/widgets/qwebenginepage/tst_qwebenginepage.cpp:331:293 02:43:06.999969 | #34 0x7fcb76fde234 in QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const /home/user/qt/5.15/qtbase/src/corelib/kernel/qmetaobject.cpp:2294:13 02:43:07.004552 | #35 0x7fcb78379eea in QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const /home/user/build/5.15/qtbase/src/testlib/../../include/QtCore/../../../../../qt/5.15/qtbase/src/corelib/kernel/qmetaobject.h:122:16 02:43:07.004639 | #36 0x7fcb78379eea in QTest::TestMethods::invokeTestOnData(int) const /home/user/qt/5.15/qtbase/src/testlib/qtestcase.cpp:939:41 02:43:07.004666 | #37 0x7fcb7837b04d in QTest::TestMethods::invokeTest(int, char const*, QTest::WatchDog*) const /home/user/qt/5.15/qtbase/src/testlib/qtestcase.cpp:1167:17 02:43:07.004849 | #38 0x7fcb7837d8b8 in QTest::TestMethods::invokeTests(QObject*) const /home/user/qt/5.15/qtbase/src/testlib/qtestcase.cpp:1508:33 02:43:07.004911 | #39 0x7fcb7837e760 in QTest::qRun() /home/user/qt/5.15/qtbase/src/testlib/qtestcase.cpp:1935:14 02:43:07.005044 | #40 0x7fcb7837dfcb in QTest::qExec(QObject*, int, char**) /home/user/qt/5.15/qtbase/src/testlib/qtestcase.cpp:1843:15 02:43:07.005120 | #41 0x557deed84557 in main /home/user/qt/5.15/qtwebengine/tests/auto/widgets/qwebenginepage/tst_qwebenginepage.cpp:4392:546 02:43:07.007673 | #42 0x7fcb761d4022 in __libc_start_main (/usr/lib/libc.so.6+0x27022) 02:43:07.007721 | #43 0x557deec0602d in _start (/home/user/build/5.15/qtwebengine/tests/auto/widgets/qwebenginepage/tst_qwebenginepage+0xe202d) 02:43:07.007751 | 02:43:07.007798 | AddressSanitizer can not provide additional info. 02:43:07.007897 | SUMMARY: AddressSanitizer: SEGV /home/user/qt/5.15/qtwebengine/src/core/render_widget_host_view_qt.cpp in QtWebEngineCore::RenderWidgetHostViewQt::OnRenderFrameMetadataChangedAfterActivation() 02:43:07.007950 | ==1438691==ABORTING
- relates to
-
QTBUG-83040 tst_QWebEnginePage::comboBoxPopupPositionAfterChildMove test crashes or asserts on exit in debug mode
-
- Closed
-
For Gerrit Dashboard: QTBUG-82987 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
294661,2 | Protect against null adapter client OnRenderFrameMetadataChangedAfterActivation | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |