Protect against null adapter client OnRenderFrameMetadataChangedAfterActivation

Notification for metadata change is asynchronous and may come after
assigned adapter client was destroyed (that is at least what happens
in linked test comboBoxPopupPositionAfterChildMove for popup).
Fix is similar to 01ee897dc5.

Fixes: QTBUG-82987
Change-Id: Ia22ee3c054ed5d5c26982cff579be9d48145f93b
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>